--- a/Sem_04/index.html
+++ b/Sem_04/index.html
@@ -7,6 +7,10 @@
   <script src="./script.js" defer></script>
 </head>
 <body>
-  
+  <main>
+    <h1 class="h1">Список пользователей</h1>
+    <ul class="user-list"></ul>
+    <button class="btn">Сортировка</button>
+  </main>
 </body>
 </html>
